@@ -1,0 +1,13 @@
+<registry xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+          i18n:domain="plone">
+
+    <records interface="plone.app.querystring.interfaces.IQueryField"
+             prefix="plone.app.querystring.field.sticky_sort">
+        <value key="title" i18n:translate="">Stickiness, then date</value>
+        <value key="description" i18n:translate=""></value>
+        <value key="enabled">False</value>
+        <value key="sortable">True</value>
+        <value key="operations"></value>
+    </records>
+
+</registry>
