@@ -4,6 +4,8 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
+- Add sticky sort on new style collections
+  [laulaz]
 - Fix sort order calculation : sticky elements should be above non-sticky
   elements
   [laulaz]
